--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursoevideo</title>
+    <title>Título do Site</title>
 </head>
 
 <body>
     <main>
         <header>
-            <h1>Cursos Grátis</h1>
+            <h1>Curogratis</h1>
         </header>
         <article>
             <h2>Curso de html e css</h2>
