--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <main>
         <header>
-            <h1>Cursos Grátis</h1>
+            <h1 class="verde">Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Curso de html e css</h2>
+            <h2 class="verde">Curso de html e css</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem hic vitae facilis, commodi ex eius
                 tenetur culpa debitis illo dolore nobis aperiam, dolor quas ut perferendis nesciunt, beatae minus in!
             </p>
         </article>
         <article>
-            <h2>Curso de javascript</h2>
+            <h2 class="verde">Curso de javascript</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad nihil pariatur maiores a fugiat? Cum sequi natus, laudantium nihil omnis officia beatae dolores blanditiis aperiam suscipit, tempore magni, possimus perferendis?</p>
         </article>
     </main>
